--- a/html/inicial/index.css
+++ b/html/inicial/index.css
@@ -23,14 +23,16 @@
 }
 
 .f1-inicio{
-    margin-top: 20px;
+    margin-top: -130px;
     word-spacing: 40px;
     text-align: center; 
+    color: #FFFFFF;
 }
 
 .f1-conta{
-    margin-left: 1220px;
-    margin-top: 0px;
+    margin-left: 1120px;
+    margin-top: -30px;
+    color: #FFFFFF;
 }
 
 .f1-minha-conta{
@@ -47,7 +49,9 @@
 }
 
 .TuriSpace{
-
+    text-align: center;
+    margin-top: -140px;
+    margin-left: -80px;
 }
 
 .Pacote{
@@ -59,9 +63,10 @@
 
 .Faixa {
     background-color:rgba(0, 5, 32, 0.85);
-    width:1358px;
+    width:1357px;
     height:137px;
     margin-top: 18px;
+    margin-left: -10px;
 }
 
 .Faixa span{
@@ -85,23 +90,28 @@
 
 .Faixa-2{
     background-color:rgba(0, 5, 9, 0.85);
-    width: 640px;
+    width: 540px;
     height:400px;
     border-radius: 20px;
     margin-top: 40px;
+}
+
+.Faixa-2 img{
+    margin-left: -343px;
+    margin-top: -139px;
 }
 
 .Faixa-2 span{
     position: absolute;
     width: 221px;
     height: 57px;
-    left: 436px;
-    top: 450px;
+    left: 350px;
+    top: 750px;
 }
 
 .Faixa-3{
     background-color:rgba(0, 5, 32, 0.85);
-    width: 640px;
+    width: 540px;
     height:400px;
     border-radius: 20px;
     margin-top: -400px;
@@ -113,6 +123,6 @@
     width: 221px;
     height: 57px;
     left: 1136px;
-    top: 450px;
+    top: 750px;
 }
 
