--- a/html/inicial/index.css
+++ b/html/inicial/index.css
@@ -2,28 +2,6 @@ body{margin: 0px}
 *{
     box-sizing: border-box;
     cursor: default;
-
-}
-
-.Container-2{
-    background-image: url(../../react/tcc/public/assets/images/saopaulo\.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.f4-Container{
-    background-color:rgba(0, 5, 32, 0.85);
-    width:100;
-    height:137px;
-}
-
-.Faixa-4{
-    text-align: center;
-}
-
-.Faixa-4 span{
-    color: #FFFFFF;
-    font-size: 55px;
 }
 
 .Container{
@@ -37,8 +15,15 @@ body{margin: 0px}
     padding-bottom: 2em;
 }
 
-
 .Cabecalho{
+
+}
+
+.f1-cabecalho{
+
+}
+
+.Logo{
 
 }
 
@@ -54,26 +39,7 @@ body{margin: 0px}
     color: #FFFFFF;
 }
 
-.Fundo{
-
-}
-
-.Logo{
-
-}
-
-.Cabecalho{
-
-}
-
-.f1-cabecalho{
-
-}
-
-.f1-inicio{
-}
-
-.f1-minha-conta{
+.Conta{
 
 }
 
@@ -116,6 +82,12 @@ body{margin: 0px}
     left:28%;
     margin-top: 30px;
 } 
+
+.Conteudo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 .f1-Conteudo{
     background-color:rgba(0, 5, 9, 0.85);
@@ -204,4 +176,177 @@ body{margin: 0px}
 .Botão{
     margin-left: 1194px;
     margin-top: 10px;
+}
+
+button{
+    border-radius: 70px;
+}
+
+.img1 img{
+    transform: scale(0.8);
+    margin-left: -40px;
+    margin-right: auto;
+    height:400px;
+    margin-top: -40px;
+}
+
+.imagens{
+    width:20em;
+}
+
+.imagens-2{
+    background-color: rgba(0, 5, 9, 0.85);
+    width:100%;
+    height: 90%;
+    margin-top: 50px;
+    border-radius: 20px;
+}
+
+.Guardar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.rodape{
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    flex-direction: row;
+    height: 130px;
+    width: 98.75vw;
+    justify-content: center;
+}
+
+.coluna1{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px ;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    align-items: center;
+    margin: 15px 30px 0px 00px;
+    width: 160px;
+    text-align: center;
+}
+
+.coluna2{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px ;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    align-items: center;
+    margin: 25px 30px 0px 30px;
+    width: 160px;
+}
+
+.coluna3{
+    display: flex;
+    flex-direction: column;
+    width: 160px;
+    font-size: 16px ;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    align-items: center;
+    margin: 25px 30px 0px 30px;
+    width: 200px;
+}
+
+.coluna4{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px ;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    align-items: center;
+    margin: 25px 30px 0px 30px;
+    width: 210px;
+}
+
+.coluna5{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px ;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    align-items: center;
+    margin: 25px 30px 0px 30px;
+    width: 200px;
+}
+
+.c4-cima{
+    cursor: pointer;
+}
+
+.c4-baixo{
+    cursor: pointer;
+}
+
+.c4-baixo2{
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.c1-cima{
+    margin-bottom: 10px;
+}
+
+.c2-cima{
+    margin-bottom: 10px;
+}
+
+.c3-cima{
+    margin-bottom: 10px;
+}
+
+.c4-cima{
+    margin-bottom: 10px;
+}
+
+.c5-cima{
+    margin-bottom: 10px;
+}
+
+.c1-baixo{
+    display: flex;
+    flex-direction: row;
+}
+
+.insta-logo{
+    margin: 0px 20px 0px 0px;
+    cursor: pointer;
+}
+
+.face-logo{
+    cursor: pointer;
+}
+
+.twitter-logo{
+    margin: 0px 0px 0px 20px;
+    cursor: pointer;
+}
+
+
+
+
+.Container-2{
+    background-image: url(../../react/tcc/public/assets/images/saopaulo\.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 160vh;
+}
+
+.f4-Container{
+    background-color:rgba(0, 5, 32, 0.85);
+    width:100;
+    height:137px;
+}
+
+.Faixa-4{
+    text-align: center;
+}
+
+.Faixa-4 span{
+    color: #FFFFFF;
+    font-size: 55px;
 }
