tcc-ajeitei-umas-coisas

--- a/html/cadastro/index.css
+++ b/html/cadastro/index.css
@@ -153,6 +153,10 @@ body{margin: 0px}
     color: #777777;
 }
 
+a{
+    color: #ffff;
+}
+
 .botao-cadastrar{
     font: 22px Rosario;
     color: white;
