TA DANDO TD ERRADO

--- a/html/lugares/index.css
+++ b/html/lugares/index.css
@@ -7,7 +7,7 @@ body{
 }
 
 
-.Contaneir{
+.Container{
     height: 100;
     width: 100vw;
     background-image: url(../../react/tcc/public/assets/images/saopaulo.png);
