--- a/html/1-tela_comandos/index.css
+++ b/html/1-tela_comandos/index.css
@@ -6,7 +6,7 @@ body{margin: 0px}
 
 
 .container-1{
-    background-image: url(../../react/tcc/public/assets/images/fundo-geometrico.png\ \(1\).png);
+    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Ffotos-vetores-gratis%2Ffundo-azul&psig=AOvVaw1cujflZm5IHCQLVT80ydt1&ust=1633068946947000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNiq5oeGpvMCFQAAAAAdAAAAABAD");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
